--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,13 +21,13 @@
 title: Vishad Goyal
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My online real estate. I plan to use this as a daily journal and/or blog.
+  I might blog about software engineering or share my cocktail recipes.
+  Who knows what might happen!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://www.lemonliberal.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: VishadGoyal
+github_username:  vishadGoyal
 
 # Build settings
 theme: minima
